# wxFreeChartGraphs

./: .gitignore  CMakeLists.txt  README.md
Exemplos/: Exemplos.vcxproj
include/wx/: AxisMultiPlot.h  axisplot.h  chartdc.cpp  chartrenderer.h  crosshair.cpp  dataset.h  marker.h  observable.cpp  plot.cpp  title.cpp
include/wx/axis/: axis.h  categoryaxis.h  labelaxis.h  numberaxis.h
include/wx/bars/: barrenderer.h
include/wx/xy/: xyarearenderer.h  xylinerenderer.h  xyplot.h  xyrenderer.h
sample/: CMakeLists.txt  UpgradeLog.htm  combinedaxisdemos.cpp  demo_vc9.VC.VC.opendb  demo_vc9.sln  demo_vc9.vcxproj  demo_vc9.vcxproj.filters  democollection.cpp  sigademos.cpp  sigademos2.cpp  sigademos3.cpp  timeseriessiga.cpp
sample/Backup/: demo_vc9.sln
src/: CMakeLists.txt  axisplot.cpp  chart.cpp  marker.cpp  plot.cpp  renderer.cpp
src/axis/: axis.cpp  categoryaxis.cpp  labelaxis.cpp  numberaxis.cpp
src/bars/: barplot.cpp  barrenderer.cpp
src/wx/: AxisMultiPlot.cpp
src/xy/: xyarearenderer.cpp  xyhistorenderer.cpp  xylinerenderer.cpp  xyplot.cpp  xyrenderer.cpp
